# secure-proxy-gateway

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.md  requirements.txt
src/: __init__.py  main.py  uvicorn_debug.py
src/cli/: commands.py
src/core/: config_mgr.py  logging.py  models.py
src/proxy/: client.py  engine.py  masking.py
src/secure_proxy_gateway/: main.py
src/secure_proxy_gateway/cli/: commands.py
src/secure_proxy_gateway/core/: config_mgr.py  exceptions.py  logging.py  runtime.py
src/secure_proxy_gateway/proxy/: client.py  engine.py  masking.py
src/secure_proxy_gateway/web/: routers.py
src/secure_proxy_gateway/web/templates/: index.html
src/web/: routers.py
tests/: test_config.py  test_masking.py  test_routing.py
